<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titles -->
    <string name="app_name">Baseball Manager</string>
    <string name="title_activity_team_select">Select Team</string>
    <string name="title_activity_create_team">Edit Team</string>
    <string name="title_activity_team_page">Team Page</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_season_statistics">Season Statistics</string>
    <string name="title_activity_roster">Roster</string>
    <string name="title_activity_add_edit_player">Edit Player</string>
    <string name="title_activity_enter_recap">Enter Game Recap</string>
    <string name="title_activity_game_recap">Game Recap</string>
    <string name="title_activity_lineup">Line-up</string>
    <string name="title_activity_depth_chart">Depth-Chart</string>
    <string name="title_activity_upcoming_games">Upcoming Games</string>
    <string name="title_activity_previous_games">Previous Games</string>
    <string name="title_activity_batting_defense_stats">Batting / Defense Statistics</string>
    <string name="title_activity_pitching_stats">Pitching Statistics</string>
    <string name="title_activity_add_game">Add Game</string>
    <!-- Menu Options -->
    <string name="action_settings">Settings</string>
    <string name="add_player">Add Player</string>
    <string name="edit_player">Edit Player</string>
    <string name="edit_team">Edit Team</string>
    <string name="remove_player">Remove Player</string>
    <string name="delete_game">Delete Game</string>
    <!-- Positions -->
    <string name="p">P</string>
    <string name="c">C</string>
    <string name="_1b">1B</string>
    <string name="_2b">2B</string>
    <string name="_3b">3B</string>
    <string name="ss">SS</string>
    <string name="lf">LF</string>
    <string name="cf">CF</string>
    <string name="rf">RF</string>
    <!-- Other Strings -->
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="confirm_message_player">Are you sure you want to delete this player? All associated statistics will be lost.</string>
    <string name="confirm_message_game">Are you sure you want to delete this game? All associated statistics will be lost.</string>
    <string name="create_team">Create Team</string>
    <string name="baseball">Baseball</string>
    <string name="cubs">Cubs</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="line_up">Line-up</string>
    <string name="line_up_instructions">Press and Hold Player to Move</string>
    <string name="manage_team">Manage the %s</string>
    <string name="manager">Manager</string>
    <string name="number">Number</string>
    <string name="pitching">Pitching</string>
    <string name="positions">Positions</string>
    <string name="roster">Roster</string>
    <string name="save">Save</string>
    <string name="saved">Saved!</string>
    <string name="schedule">Schedule</string>
    <string name="season_statistics">Season Statistics</string>
    <string name="select_team">Select Your Team</string>
    <string name="team_name">Team Name</string>
    <string name="team_logo">Team Logo</string>
    <string name="upload_logo">Upload Logo</string>
    <string name="welcome">Welcome to Baseball Manager</string>
    <string name="name_stub">Name</string>
    <string name="ab">AB</string>
    <string name="h">H</string>
    <string name="k">K</string>
    <string name="bb">BB</string>
    <string name="avg">Avg</string>
    <string name="e">E</string>
    <string name="ip">IP</string>
    <string name="r">R</string>
    <string name="er">ER</string>
    <string name="era">ERA</string>
    <string name="team_name_empty_string">Team Name</string>
    <string name="no_upcoming_games">No upcoming games</string>
    <string name="no_date">MM/DD/YYYY</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="time">Time</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="date">Date</string>
    <string name="add_game">Add Game</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="recap">Recap</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="no_previous_games">No previous games</string>
    <string name="dummy_final_score">Team 5, Team 10</string>
    <string name="zero">0</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="errors">Errors</string>
    <string name="hits">Hits</string>
    <string name="runs">Runs</string>
    <string name="inning">Inning %d</string>
    <string name="dummy_score_home">Team1: 0</string>
    <string name="dummy_score_away">Team2: 0</string>
    <string name="walks">Walks</string>
    <string name="strikeouts">Strikeouts</string>
    <string name="at_bats">At Bats</string>
    <string name="game_selected">Game Selected</string>

</resources>
