<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PitchingStatsFragment"
    android:orientation="vertical">
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:orientation="vertical" >
	
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@color/gray" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="28dp"
	        android:orientation="horizontal" >
		
	        <TextView
	            android:id="@+id/pitcher_name"
	            android:layout_width="70dp"
	            android:layout_height="match_parent"
	            android:layout_weight="2"
	            android:gravity="center_vertical"
	            android:text="@string/name_stub"
	            android:textSize="20sp" />
	
	        <View
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/gray" />
	
	        <TextView
	            android:id="@+id/innings_pitched"
	            android:layout_width="25dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/ip"
	            android:textSize="20sp" />
	
	        <View
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/gray" />
	
	        <TextView
	            android:id="@+id/runs"
	            android:layout_width="25dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/r"
	            android:textSize="20sp" />
	
	        <View
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/gray" />
	
	        <TextView
	            android:id="@+id/earned_runs"
	            android:layout_width="25dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/er"
	            android:textSize="20sp" />
	
	        <View
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/gray" />
	
	        <TextView
	            android:id="@+id/strike_outs_pitcher"
	            android:layout_width="25dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/k"
	            android:textSize="20sp" />
	
	        <View
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/gray" />
	
	        <TextView
	            android:id="@+id/walks_pitcher"
	            android:layout_width="25dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/bb"
	            android:textSize="20sp" />
	
	        <View
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/gray" />
	
	        <TextView
	            android:id="@+id/era"
	            android:layout_width="30dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/era"
	            android:textSize="20sp" />
	    </LinearLayout>
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@color/gray" />
	</LinearLayout>

    <ListView 
	    android:id="@+id/pitching_stats_list_view"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent">
	</ListView>

</LinearLayout>
