<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/date_of_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/no_date"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/game_info"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/date_of_game"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/team1_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_1"
            android:paddingLeft="5dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/team2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/team1_textview"
            android:text="@string/team_2"
            android:paddingLeft="5dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/gametime_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="5dp"
            android:layout_centerVertical="true"
            android:text="@string/time"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@color/gray" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/gray" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@color/gray" />
    </RelativeLayout>

</RelativeLayout>