<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rosehulman.baseballmanager.BattingDefenseStatsFragment"
    android:orientation="vertical">

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:orientation="vertical" >

	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@color/gray" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="28dp"
	        android:orientation="horizontal" >
		
	        <TextView
	            android:id="@+id/batter_name"
	            android:layout_width="70dp"
	            android:layout_height="match_parent"
	            android:layout_weight="2"
	            android:gravity="center_vertical"
	            android:textSize="20sp" />
	
	        <View
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/gray" />
	
	        <TextView
	            android:id="@+id/at_bats"
	            android:layout_width="25dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/ab"
	            android:textSize="20sp" />
	
	        <View
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/gray" />
	
	        <TextView
	            android:id="@+id/hits"
	            android:layout_width="25dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/h"
	            android:textSize="20sp" />
	
	        <View
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/gray" />
	
	        <TextView
	            android:id="@+id/strike_outs_batter"
	            android:layout_width="25dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/k"
	            android:textSize="20sp" />
	
	        <View
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/gray" />
	
	        <TextView
	            android:id="@+id/walks_batter"
	            android:layout_width="25dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/bb"
	            android:textSize="20sp" />
	
	        <View
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/gray" />
	
	        <TextView
	            android:id="@+id/batting_average"
	            android:layout_width="30dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/avg"
	            android:textSize="20sp" />
	
	        <View
	            android:layout_width="1dp"
	            android:layout_height="match_parent"
	            android:background="@color/gray" />
	
	        <TextView
	            android:id="@+id/errors"
	            android:layout_width="25dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/e"
	            android:textSize="20sp" />
	    </LinearLayout>
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@color/gray" />
	</LinearLayout>

	<ListView 
	    android:id="@+id/batting_defense_stats_list_view"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent">
	</ListView>

</LinearLayout>
